<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="#949ca4"
    android:layout_height="match_parent"
    tools:context=".Cart">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/cart_list"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="280dp"
        android:background="#949ca4"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        tools:itemCount="3"
        tools:listitem="@layout/cartlist" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cartInfo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        app:layout_constraintBottom_toTopOf="@+id/relativeLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/textView6"
            android:layout_width="62dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="1dp"
            android:layout_marginTop="8dp"
            android:text="Total:"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="@+id/couponValue"
            app:layout_constraintTop_toBottomOf="@+id/couponValue" />

        <TextView
            android:id="@+id/totalAmountTxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="0.0"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="@+id/textView6"
            app:layout_constraintStart_toEndOf="@+id/textView6"
            app:layout_constraintTop_toTopOf="@+id/textView6" />

        <Button
            android:id="@+id/payBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:background="@drawable/header_background"
            android:backgroundTint="#272928"
            android:text="Pay"
            android:textColor="#FFFFFF"
            app:layout_constraintBottom_toBottomOf="@+id/applyCoupon"
            app:layout_constraintStart_toEndOf="@+id/applyCoupon"
            app:layout_constraintTop_toTopOf="@+id/applyCoupon" />

        <Button
            android:id="@+id/applyCoupon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:background="@drawable/header_background"
            android:backgroundTint="#272928"
            android:text="Apply"
            android:textColor="#FFFFFF"
            app:layout_constraintBottom_toBottomOf="@+id/couponValue"
            app:layout_constraintStart_toEndOf="@+id/couponValue"
            app:layout_constraintTop_toTopOf="@+id/couponValue" />

        <Button
            android:id="@+id/clearSale"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/header_background"
            android:backgroundTint="#272928"
            android:text="Clear"
            android:textColor="#FFFFFF"
            app:layout_constraintStart_toEndOf="@+id/couponValue"
            app:layout_constraintTop_toBottomOf="@+id/applyCoupon" />

        <EditText
            android:id="@+id/couponValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="8dp"
            android:hint="Enter Coupon"
            app:layout_constraintStart_toStartOf="@+id/cartInfo"
            app:layout_constraintTop_toTopOf="@+id/cartInfo" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:id="@+id/relativeLayout"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginTop="700dp"
        android:layout_marginBottom="32dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageButton
            android:id="@+id/homeBtn"
            android:layout_width="0dp"
            android:onClick="home"
            android:layout_height="match_parent"
            android:layout_weight=".25"
            android:backgroundTint="#272928"
            android:src="@drawable/ic_home_pink"/>

        <ImageButton
            android:id="@+id/searchBtn"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight=".25"
            android:backgroundTint="#272928"
            android:onClick="search"
            android:src="@drawable/ic_pink_search"/>

        <ImageButton
            android:id="@+id/barcodeBtn"
            android:layout_width="0dp"
            android:layout_weight=".25"
            android:backgroundTint="#272928"
            android:layout_height="match_parent"
            android:onClick="scan"
            android:src="@drawable/ic_pink_scan"/>

        <ImageButton
            android:id="@+id/cartBtn"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:backgroundTint="#272928"
            android:layout_weight=".25"
            android:onClick="cart"
            android:src="@drawable/ic_basket"/>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>